tests/baselines/reference/indexerAsOptional.errors.txt
==== tests/cases/compiler/indexerAsOptional.ts (2 errors) ====
    interface indexSig {
        //Index signatures can't be optional
        [idx?: number]: any; //err
         ~~~~~~~~~~~~
!!! error TS1019: Index signature parameter cannot have a question mark.
    }
    
    class indexSig2 {
        //Index signatures can't be optional
        [idx?: number]: any //err
         ~~~~~~~~~~~~
!!! error TS1019: Index signature parameter cannot have a question mark.
    }